--- a/app/views/pages/team.liquid
+++ b/app/views/pages/team.liquid
@@ -49,7 +49,7 @@
               <div class="{{ classText }} {% cycle 'text_style': 'pull-left', 'pull-right' %}">
                 <div class="bloc-header">
                   <span class="bloc-title">{{ person.full_name }}</span><br />
-                  <span class="bloc-subtitle">{{ person.position }}</span>
+                  <span class="bloc-subtitle">{{ person.title }}</span>
                 </div>
 
                 <div class="bloc-description">
