--- a/public/stylesheets/jumbotron.css.scss
+++ b/public/stylesheets/jumbotron.css.scss
@@ -88,6 +88,20 @@
   }
 }
 
+.jumbotron.main-content {
+  background: url('/images/gradient-background-glow.png') repeat-y top center;
+}
+
+.jumbotron.main-header {
+  h1 {
+    margin-top: 0;
+  }
+}
+
+.jumbotron.main-content:before {
+  @include after-before-content("", block, absolute, url('/images/shadow-up.png') no-repeat top center, -15px, 0, 0, 0);
+}
+
 .jumbotron:after {
   content: '';
   display: block;
@@ -145,6 +159,12 @@
       }
     }
   }
+
+  .jumbotron.main-header {
+    h1 {
+      margin-bottom:45px;
+    }
+  }
 }
 
 @media (max-width: 767px) {
@@ -166,6 +186,12 @@
       }
     }
   }
+
+  .jumbotron.main-header {
+    h1 {
+      margin-bottom:40px;
+    }
+  }
 }
 
 @media (max-width: 480px) {
@@ -180,6 +206,12 @@
     
     p, .btn-huge {
       font-size: 20px;
+    }
+  }
+
+  .jumbotron.main-header {
+    h1 {
+      margin-bottom:55px;
     }
   }
 }
