Job Offers -> Offers - Content type template for show page added

--- a/app/views/pages/offers.liquid
+++ b/app/views/pages/offers.liquid
@@ -38,7 +38,7 @@
             <div class="span12">
 
               <div class="bloc-header">
-                <span class="bloc-title">{{ offer.title }}</span>
+                <span class="bloc-title"><a href="/offers/{{ offer._permalink }}">{{ offer.title }}</a></span>
               </div>
 
               <div class="bloc-description">
