--- a/app/views/snippets/team.liquid
+++ b/app/views/snippets/team.liquid
@@ -72,7 +72,7 @@
         {% with_scope homepage:true, published: true %}
           {% for offer in contents.offers limit:2 %}
             <span class="bloc-section-title team">
-              <a href="{{ locale }}/offers#{{ offer._permalink }}">{{ offer.title }}</a>
+              <a href="{{ locale }}/offers/{{ offer._permalink }}">{{ offer.title }}</a>
             </span>
             <span class="bloc-section-description">{{ offer.body | truncate:60 }}</span>
           {% endfor %}
