Inject variables to page_content not to get errors in Rails application

--- a/app/views/pages/event_solutions.liquid
+++ b/app/views/pages/event_solutions.liquid
@@ -25,6 +25,8 @@
 
         {% for object in contents.solutions %}
 
+          {% assign icon = false %}
+          {% assign link_url = true %}
           {% include 'page_content' %}
 
         {% endfor %}
