--- a/app/views/pages/technologies.liquid
+++ b/app/views/pages/technologies.liquid
@@ -28,6 +28,8 @@
 
         {% for object in contents.technologies %}
 
+          {% assign icon = false %}
+          {% assign link_url = false %}
           {% include 'page_content' %}
 
         {% endfor %}
