--- a/public/stylesheets/jumbotron.css.scss
+++ b/public/stylesheets/jumbotron.css.scss
@@ -88,8 +88,21 @@
   }
 }
 
+.jumbotron.main-header {
+  padding-top: 0;
+
+  h1 {
+    color: #555;
+    text-shadow: 1px 1px 3px #FFFFFF;
+  }
+}
+
 .jumbotron.main-content {
   background: url('/images/gradient-background-glow.png') repeat-y top center;
+  padding-top: 40px;
+  padding-bottom: 80px;
+  text-shadow: none;
+  color: #555;
 }
 
 .jumbotron.main-header {
@@ -213,5 +226,10 @@
     h1 {
       margin-bottom:55px;
     }
+  }
+
+  .jumbotron.main-content {
+    padding-left: 20px;
+    padding-right: 20px;
   }
 }
