Minor CSS modification

--- a/public/stylesheets/jumbotron.css.scss
+++ b/public/stylesheets/jumbotron.css.scss
@@ -103,6 +103,10 @@
   padding-bottom: 80px;
   text-shadow: none;
   color: #555;
+  
+  .bloc-buttons {
+    color: #FFF;
+  }
 }
 
 .jumbotron.main-header {
