Editable text for all offers button

--- a/app/views/pages/offers/content_type_template.liquid
+++ b/app/views/pages/offers/content_type_template.liquid
@@ -15,7 +15,11 @@
           </div>
           
           <div class="bloc-buttons">
-            <a href="/{{ locale }}/offers" class="btn btn-large btn-danger">All Offers</a>
+            <a href="/{{ locale }}/offers" class="btn btn-large btn-danger">
+              {% editable_short_text "all_offers_title", hint: "All Offers Button", priority: 50 %}
+                All Offers
+              {% endeditable_short_text %}
+            </a>
           </div>
         </div>
       </div>
