change pages head format

--- a/app/views/pages/offers/content_type_template.liquid
+++ b/app/views/pages/offers/content_type_template.liquid
@@ -1,3 +1,10 @@
+---
+templatized: true
+published: true
+content_type: offers
+title: "Template of an offer"
+---
+
 {% extends parent %}
 
 {% block 'main' %}
