development projects page and model

--- a/public/stylesheets/application.css.scss
+++ b/public/stylesheets/application.css.scss
@@ -1081,3 +1081,12 @@ $icon-medium-classes-list: (mobinetwork, mobicheckin, social-networks, suitcase,
     line-height: 150px;
   }
 }
+
+// development project page
+#section-development-project {
+  padding-bottom: 50px;
+  color: #464646;
+  line-height: 23px;
+  text-shadow: 1px 1px 0px #FFF;
+  font-size: 0.9em;
+}
