--- a/app/views/pages/projets/content_type_template.liquid
+++ b/app/views/pages/projets/content_type_template.liquid
@@ -1,6 +1,7 @@
 ---
 templatized: true
-published: true
+published: false
+listed: false
 content_type: projects
 title: "Template of a dev project"
 ---
