--- a/app/views/pages/projets/content_type_template.liquid
+++ b/app/views/pages/projets/content_type_template.liquid
@@ -1,6 +1,6 @@
 ---
 templatized: true
-published: false
+published: true
 listed: false
 content_type: projects
 title: "Template of a dev project"
