--- a/app/views/pages/offers.liquid
+++ b/app/views/pages/offers.liquid
@@ -1,6 +1,7 @@
 ---
 title: "Offres d'emploi"
 published: true
+slug: offres-emploi
 ---
 
 {% extends index %}
@@ -43,7 +44,7 @@ published: true
             <div class="span12">
 
               <div class="bloc-header">
-                <span class="bloc-title"><a href="/{{ locale }}/offers/{{ offer._permalink }}">{{ offer.title }}</a></span>
+                <span class="bloc-title"><a href="/offres/{{ offer._permalink }}">{{ offer.title }}</a></span>
               </div>
 
               <div class="bloc-description">
